--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,12 @@ matrix:
     - go: tip
 sudo: true
 before_install:
+  - sudo apt-get -qq update
   - sudo add-apt-repository ppa:masterminds/glide -y
-  - sudo apt-get update -q
+  - sudo add-apt-repository ppa:saltstack/salt -y
+  - sudo apt-get -qq update
   - sudo apt-get install glide -y
+  - sudo apt-get install libzmq4 libzmq4-dev
 install:
   - glide install
   - go build
