--- a/glide.yaml
+++ b/glide.yaml
@@ -5,7 +5,7 @@ import:
 - package: github.com/Unknwon/com
   version: ~1.0.0
 - package: github.com/fatih/color
-  version: ~1.4.1
+  version: master
 - package: github.com/pebbe/zmq4
 - package: github.com/pkg/errors
   version: ~0.8.0
