--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,7 +1,7 @@
 
 [[dependencies]]
   branch = "master"
-  name = "github.com/Sirupsen/logrus"
+  name = "github.com/sirupsen/logrus"
 
 [[dependencies]]
   branch = "master"
