--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_install:
   - sudo make -j7
   - sudo make install
 install:
-  - glide install --force --debug
+  - glide --debug install --force 
   - go get github.com/mjibson/esc
   - go get github.com/ahmetb/govvv
   - go get github.com/franciscocpg/gox
