chore: more work on fixing builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,9 @@ before_install:
   - sudo make -j7
   - sudo make install
 install:
-  - glide --debug install --force 
+  - glide --debug install --force
+  - rm -fr vendor/github.com/Sirupsen
+  - find vendor -type f -exec sed -i 's/Sirupsen/sirupsen/g' {} +
   - go get github.com/mjibson/esc
   - go get github.com/ahmetb/govvv
   - go get github.com/franciscocpg/gox
