--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ matrix:
     - go: tip
   allow_failures:
     - go: tip
-dist: trusty
+dist: xenial
 sudo: true
 before_install:
   - sudo apt-get -qq update
