--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,7 @@ before_install:
   - sudo make -j7
   - sudo make install
 install:
-  - glide install --force
-  - rm -fr vendor/github.com/Sirupsen
-  - find vendor -type f -exec sed -i 's/Sirupsen/sirupsen/g' {} +
+  - dep ensure -v
   - go get github.com/mjibson/esc
   - go get github.com/ahmetb/govvv
   - go get github.com/franciscocpg/gox
